--- a/index.html
+++ b/index.html
@@ -960,12 +960,13 @@
 </td>
 </tr>
 <tr style="text-align:center;">
-<td style="background: #FFFFFF;">
+<td style="background: #FFFFFF;" id="img">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #D1C17D; border: 2px solid #786824;"> <span class="plainlinks"><img alt="525" src="images/Rock/525MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #D1C17D; border: 2px solid #786824;"> <span class="plainlinks">
+<img alt="525" src="images/Rock/525MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Boldore</span> 
+<td> <span id="gtxt">Boldore</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1004,12 +1005,13 @@
 </td>
 </tr>
 <tr style="text-align:center;">
-<td style="background: #FFFFFF;">
+<td style="background: #FFFFFF;" id="img">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #786824;"> <span class="plainlinks"><img alt="222" src="images/Rock/222MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #786824;"> <span class="plainlinks">
+<img alt="222" src="images/Rock/222MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Corsola</span> 
+<td> <span id="gtxt">Corsola</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1506,10 +1508,11 @@
 <tr style="text-align:center;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
-<tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #6D7815;"> <span class="plainlinks"><img alt="268" src="images/Poison/268MS.png" width="40" height="40"/></span>
+<tbody><tr id="img">
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #6D7815;"> <span class="plainlinks">
+<img alt="268" src="images/Poison/268MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Cascoon</span>
+<td> <span id="gtxt">Cascoon</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1529,10 +1532,11 @@
 <tr style="text-align:center;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
-<tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks"><img alt="049" src="images/Poison/049MS.png" width="40" height="40"/></span>
+<tbody><tr id="img">
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks">
+<img alt="049" src="images/Poison/049MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Venomoth</span>
+<td> <span id="gtxt">Venomoth</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1602,12 +1606,13 @@
 </td>
 </tr>
 <tr style="text-align:center;">
-<td style="background: #FFFFFF;">
+<td style="background: #FFFFFF;" id="img">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks"><img alt="544" src="images/Poison/544MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks">
+<img alt="544" src="images/Poison/544MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Whirlipede</span>
+<td> <span id="gtxt">Whirlipede</span>
 </td></tr></tbody></table>
 </td>
 </tr>
